tests/fixtures/refine_err/bad_port.reconf
type Port = { x : Int | x > 1024 && x < 65535 };

let bad = 80 : Port;

bad
